--- a/src/app/Components/Homepage/parametrizacion-biomedica/parametrizacion-biomedica.component.html
+++ b/src/app/Components/Homepage/parametrizacion-biomedica/parametrizacion-biomedica.component.html
@@ -1,6 +1,6 @@
 <div class="dashboard-container">
 
-    <div class="hero-section" style="background: linear-gradient(135deg, #d35400 0%, #e67e22 100%);">
+    <div class="hero-section">
         <div class="hero-content">
             <h1>Parametrización</h1>
         </div>
