--- a/src/app/Components/navbars/biomedicausernavbar/biomedicausernavbar.component.html
+++ b/src/app/Components/navbars/biomedicausernavbar/biomedicausernavbar.component.html
@@ -3,8 +3,8 @@
     <ng-template #start>
       <div class="flex align-items-center gap-2 mr-4 logo-container">
         <img src="LogoAgora.png" height="40" alt="Logo" />
-        <a class="text-xl font-bold text-color no-underline" [routerLink]="[getHomeLink()]"
-          style="cursor: pointer;">AppHusrt</a>
+        <a class="text-xl font-bold text-color no-underline" [routerLink]="[getHomeLink()]" style="cursor: pointer;">{{
+          themeService.getThemeConfig().appName }}</a>
       </div>
     </ng-template>
 
