--- a/src/app/Components/navbars/mesausernavbar/mesausernavbar.component.html
+++ b/src/app/Components/navbars/mesausernavbar/mesausernavbar.component.html
@@ -4,7 +4,7 @@
             <div class="flex align-items-center gap-2 mr-4 logo-container">
                 <img src="LogoAgora.png" height="40" alt="Logo" />
                 <a class="text-xl font-bold text-color no-underline" routerLink="/mesauser/home"
-                    style="cursor: pointer;">AppHusrt</a>
+                    style="cursor: pointer;">{{ themeService.getThemeConfig().appName }}</a>
             </div>
         </ng-template>
 
