--- a/src/app/Components/navbars/mantenimientoadminnavbar/mantenimientoadminnavbar.component.html
+++ b/src/app/Components/navbars/mantenimientoadminnavbar/mantenimientoadminnavbar.component.html
@@ -3,7 +3,8 @@
         <ng-template #start>
             <div class="flex align-items-center gap-2 mr-4">
                 <i class="pi pi-wrench text-primary text-2xl"></i>
-                <a class="text-xl font-bold text-color no-underline" href="/adminmantenimineto">AppHusrt -
+                <a class="text-xl font-bold text-color no-underline" href="/adminmantenimiento">{{
+                    themeService.getThemeConfig().appName }} -
                     Mantenimiento</a>
             </div>
         </ng-template>
