--- a/src/app/Components/navbars/sistemasadminnavbar/sistemasadminnavbar.component.html
+++ b/src/app/Components/navbars/sistemasadminnavbar/sistemasadminnavbar.component.html
@@ -3,7 +3,8 @@
         <ng-template #start>
             <div class="flex align-items-center gap-2 mr-4">
                 <i class="pi pi-server text-primary text-2xl"></i>
-                <a class="text-xl font-bold text-color no-underline" href="/adminsistemas">AppHusrt - Sistemas</a>
+                <a class="text-xl font-bold text-color no-underline" href="/adminsistemas">{{
+                    themeService.getThemeConfig().appName }} - Sistemas</a>
             </div>
         </ng-template>
 
